src/ui/radarr_ui/blocklist/snapshots/managarr__ui__radarr_ui__blocklist__blocklist_ui_tests__tests__snapshot_tests__Blocklist.snap
---
source: src/ui/radarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Movie Title ▼                    Source Title                                         Languages        Quality           Formats          Date                    
=> Test                             z movie                                              English          HD - 1080p        English          2024-02-10 07:28:45 UTC
